WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214319
[iOS] Caret should be before text placeholder instead of after it
https://bugs.webkit.org/show_bug.cgi?id=214319
Summary
[iOS] Caret should be before text placeholder instead of after it
Daniel Bates
Reported
2020-07-14 13:52:54 PDT
To match UIKit the caret should be placed before the text placeholder instead of after it.
Attachments
For the bots
(981 bytes, patch)
2020-07-14 13:54 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(9.40 KB, patch)
2020-07-14 16:16 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
To Land
(16.13 KB, patch)
2020-07-15 13:08 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
To Land
(16.27 KB, patch)
2020-07-15 13:22 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2020-07-14 13:53:08 PDT
<
rdar://problem/65295523
>
Daniel Bates
Comment 2
2020-07-14 13:54:22 PDT
Created
attachment 404278
[details]
For the bots
Daniel Bates
Comment 3
2020-07-14 16:16:30 PDT
Created
attachment 404300
[details]
Patch
Daniel Bates
Comment 4
2020-07-14 18:54:57 PDT
Comment on
attachment 404300
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=404300&action=review
> Source/WebCore/editing/Editor.cpp:3326 > + m_document.selection().setSelection(VisibleSelection { positionInParentBeforeNode(placeholder.ptr()), SEL_DEFAULT_AFFINITY }, FrameSelection::defaultSetSelectionOptions(UserTriggered));
This is not correct. positionInParentBeforeNode() will assert if the placeholder is not in the document. Will patch this up to check that...
Daniel Bates
Comment 5
2020-07-15 13:05:16 PDT
Thanks Wenson!
Daniel Bates
Comment 6
2020-07-15 13:08:11 PDT
Created
attachment 404380
[details]
To Land
Daniel Bates
Comment 7
2020-07-15 13:22:12 PDT
Created
attachment 404382
[details]
To Land
Daniel Bates
Comment 8
2020-07-15 13:28:11 PDT
Comment on
attachment 404382
[details]
To Land Clearing flags on attachment: 404382 Committed
r264418
: <
https://trac.webkit.org/changeset/264418
>
Daniel Bates
Comment 9
2020-07-15 13:28:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug